--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 body {
   display: flex;
-  background-color: #C4D7F2;
+  background-color: #afdedc;
   justify-content: space-between;
   padding: 2%;
   max-width: 1024px;
@@ -40,7 +40,7 @@ body {
 .side-menu > * {
   background-color: whitesmoke;
   border-radius: 8px;
-  box-shadow: 4px 4px 8px #696d7d;
+  box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5),inset 2px 2px 2px rgba(255, 255, 255, 0.5) ;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -83,7 +83,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 2%;
-  border-bottom: 1px solid #696d7d;
+  border-bottom: 2px solid #afdedc;
 }
 
 .tasks-item__value{
@@ -98,7 +98,7 @@ body {
   height: 100%;
   background-color: whitesmoke;
   border-radius: 8px;
-  box-shadow: 4px 4px 8px #696d7d;
+  box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5),inset 2px 2px 2px rgba(255, 255, 255, 0.5) ;
   padding: 2%;
   position: relative;
 }
@@ -123,7 +123,16 @@ body {
   padding: 0 2%;
   margin-top: 2%;
   border-radius: 16px;
-  box-shadow: 2px 2px 4px #696d7d;
+  box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5),inset 2px 2px 2px rgba(255, 255, 255, 0.5) ;
+}
+
+.timer-entry.--completed{
+  opacity: .5;
+}
+
+.timer-entry.--completed button:not(:last-of-type):hover{
+  color: inherit;
+  cursor: auto;
 }
 
 .timer-entry__name{
@@ -135,7 +144,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 40%;
+  width: 50%;
   height: 100%;
   color: whitesmoke;
   text-shadow: 2px 2px 2px #696d7d;
@@ -150,12 +159,12 @@ body {
 .timer-entry__actions{
   display: flex;
   justify-content: space-between;
-  width: 25%;
+  width: 35%;
 }
 
 .timer-entry__actions button {
   background-color: rgba(0, 0, 0, 0);
-  margin: 0 5%;
+  margin: 0 3%;
   border: 3px solid whitesmoke;
   color: whitesmoke;
   box-shadow: 2px 2px 2px #696d7d, inset 2px 2px 2px #696d7d;
@@ -174,13 +183,14 @@ body {
   transform: scale(.8);
 }
 
-.timer-entry__complete-task{
+.timer-entry__delete-task{
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
 }
 
 .timer-entry__actions button:hover {
   cursor: pointer;
+  color: #696969;
 }
 
 .add-entry{
@@ -188,7 +198,7 @@ body {
   background-color: #696d7d;
   color: whitesmoke;
   border-radius: 16px;
-  box-shadow: 2px 2px 4px #696d7d;
+  box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.5),inset 2px 2px 2px rgba(255, 255, 255, 0.5) ;
 }
 
 .add-entry:hover{
